# CCS26BOpensci

./: .gitignore  CMakeLists.txt  CompactIO.h  Format.cpp  FunctionPairGenerator.cpp  FunctionPairGenerator.h  FunctionPairMain.cpp  ITreeSimplex.h  ITreeSimplexMain.cpp  MFsTree.cpp  MFsTree.h  MFsTreeFull.cpp  MFsTreeFull.h  MerkleTree.h  PolytopeOps.h  PolytopeStructs.h  README.md  SimplexSolver.h  VMFsTree.cpp  VMFsTree.h  graphit.py
